fix: disable nowrap in normal code blocks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,6 +406,7 @@ section.article {
     & > code {
       padding: 0px !important;
       font-size: var(--font-code);
+      white-space: unset;
       border: none;
     }
 
